Fixed alignment

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -54,6 +54,8 @@ body {
 .app {
   text-align: center;
   font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 .countrySelection {
